# pest-web-debug

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  app-1536e4925a8dca23.js  app-1536e4925a8dca23_bg.wasm  app-2327c8507ae3fc32.js  app-2327c8507ae3fc32_bg.wasm  app-2835f8192be99b30.js  app-2835f8192be99b30_bg.wasm  app-aa5dcbf8e4e448d7.js  app-aa5dcbf8e4e448d7_bg.wasm  index-275d97f27195d3be.css  index.html  index.scss  worker.js  worker_bg.wasm
.github/workflows/: deploy.yml  pr_check.yml
src/: debugworker.rs  lib.rs
