[package]
name = "pest-web-debug"
version = "0.1.0"
edition = "2021"
description = "A web-based debugger for pest using Yew"
readme = "README.md"
repository = "https://github.com/tomtau/pest-web-debug"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-agent = "0.2"
serde = "1"
pest = "2.7"
pest_meta = { version = "2.7", features = ["grammar-extras"] }
pest_vm = { version = "2.7", features = ["grammar-extras"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ "HtmlDialogElement", "HtmlInputElement", "HtmlSelectElement" ] }
